Add detailed agenda section for upcoming meeting

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <ul>
                 <li><a href="#about">About</a></li>
                 <li><a href="#meetings">Meetings</a></li>
+                <li><a href="#agenda">Agenda</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
@@ -26,7 +27,42 @@
 
         <section id="meetings">
             <h2>Upcoming Meetings</h2>
-            <p>Stay tuned for our next meeting schedule and agenda.</p>
+            <p>Our next meeting is scheduled for January 2025. Please review the agenda below and come prepared for engaging discussions.</p>
+        </section>
+
+        <section id="agenda">
+            <h2>Meeting Agenda</h2>
+            <div class="agenda-section">
+                <h3>Recent AI Advancements Discussion</h3>
+                <ul>
+                    <li>
+                        <strong>Latest developments in Large Language Models</strong>
+                        <p>Discussion of recent breakthroughs and their implications for the industry.</p>
+                    </li>
+                    <li>
+                        <strong>Progress in Computer Vision</strong>
+                        <p>Updates on new architectures and real-world applications.</p>
+                    </li>
+                    <li>
+                        <strong>Advancements in Robotics</strong>
+                        <p>Integration of AI in robotics and automation systems.</p>
+                    </li>
+                    <li>
+                        <strong>AI Ethics and Safety</strong>
+                        <p>Current challenges and proposed solutions in responsible AI development.</p>
+                    </li>
+                </ul>
+            </div>
+            
+            <div class="agenda-section">
+                <h3>Meeting Schedule</h3>
+                <ul>
+                    <li><strong>Welcome and Introduction</strong> (15 minutes)</li>
+                    <li><strong>Technical Presentations</strong> (45 minutes)</li>
+                    <li><strong>Open Discussion</strong> (30 minutes)</li>
+                    <li><strong>Action Items and Next Steps</strong> (15 minutes)</li>
+                </ul>
+            </div>
         </section>
 
         <section id="contact">
